--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="185dp"
         android:layout_marginBottom="234dp"
-        android:text="Button"
+        android:text="Mood"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
