--- a/app/src/main/res/layout/activity_tracker_result.xml
+++ b/app/src/main/res/layout/activity_tracker_result.xml
@@ -84,4 +84,15 @@
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/myfabrefresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="33dp"
+        android:layout_marginBottom="45dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_popup_sync" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
