--- a/app/src/main/res/layout/activity_notesapp.xml
+++ b/app/src/main/res/layout/activity_notesapp.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
-        android:background="#13736B"
+        android:background="#77ECE2"
         android:text="My Notes"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
